--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.8",
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "install": "^0.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
